# openstinger

./: .env.example  .gitignore  LICENSE  NOTICES.md  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  start_openstinger.bat
integrations/: AGENT_SKILL_TEMPLATE.md  DEERFLOW.md  INTEGRATION_MODES.md  LANGGRAPH_INTEGRATION_GUIDE.md  NANOBOT.md  NANOCLAW.md  OPENCLAW.md  PICOCLAW.md  QWEN_AGENT.md  ZEROCLAW.md
scripts/: register_autostart.ps1  start.bat  start.sh  start_openstinger.ps1  stop_openstinger.ps1  unregister_autostart.ps1
src/openstinger/: __init__.py  cli.py  config.py
src/openstinger/agents/: __init__.py  context.py  namespace.py  spawn.py
src/openstinger/gradient/: alignment_profile.py  correction_engine.py  drift_detector.py  interceptor.py
src/openstinger/gradient/evaluators/: constraint_compliance.py  content_safety.py  identity_consistency.py  value_coherence.py
src/openstinger/gradient/mcp/: server.py
src/openstinger/ingestion/: profile_reader.py  scheduler.py  session_reader.py
src/openstinger/knowledge/: __init__.py  chunker.py  ingest.py
src/openstinger/knowledge/sources/: __init__.py  pdf.py  plaintext.py  url.py  youtube.py
src/openstinger/mcp/: server.py
src/openstinger/mcp/tools/: memory_tools.py
src/openstinger/operational/: adapter.py  models.py
src/openstinger/scaffold/: vault_engine.py  vault_sync.py
src/openstinger/scaffold/mcp/: server.py
src/openstinger/search/: __init__.py  ranker.py
src/openstinger/storage/: __init__.py  embedding_cache.py
src/openstinger/temporal/: anthropic_client.py  conflict_resolver.py  deduplicator.py  edges.py  engine.py  entity_registry.py  falkordb_driver.py  nodes.py  openai_compatible_client.py  openai_embedder.py
src/openstinger/temporal/prompts/: extraction.py
tests/: conftest.py  test_smoke.py
tests/tier1/: test_deduplication.py  test_operational_db.py  test_session_reader.py  test_temporal_conflict.py
tests/tier2/: test_vault.py
tests/tier3/: test_gradient.py  test_gradient_integration.py
