[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openstinger"
version = "0.8.0"
description = "Three-tier AI agent memory, reasoning, and alignment harness"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Graph database
    "falkordb>=1.0.8",
    # Anthropic SDK
    "anthropic>=0.40.0",
    # OpenAI-compatible client (embeddings + Novita/OpenAI LLM)
    "openai>=1.51.0",
    # MCP protocol — 1.26.0+ used; SSE transport via starlette/uvicorn
    "mcp>=1.2.0",
    # SSE/HTTP transport for MCP server (required for OpenClaw Docker integration)
    "starlette>=0.41.0",
    "uvicorn>=0.32.0",
    # Data validation
    "pydantic>=2.9.2",
    # Async HTTP (used by knowledge/sources/url.py)
    "aiohttp>=3.10.10",
    "httpx>=0.27.0",
    # ORM
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    # Text processing / LSH deduplication
    "datasketch>=1.6.0",
    "nltk>=3.9.0",
    # Tokenization (for LSH)
    "tiktoken>=0.7.0",
    # YAML config
    "pyyaml>=6.0.2",
    # Environment variables
    "python-dotenv>=1.0.0",
    # Async utilities
    "anyio>=4.4.0",
    "tenacity>=9.0.0",
    # CLI
    "click>=8.1.0",
    # Scheduling (APScheduler — optional but included for Tier 2)
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "hypothesis>=6.100.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]
postgres = [
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
]
# Optional document ingestion dependencies (knowledge/ module)
# Install with: pip install -e ".[knowledge]"
knowledge = [
    "beautifulsoup4>=4.12.0",     # URL HTML extraction
    "pdfplumber>=0.11.0",          # PDF extraction (primary)
    "pypdf>=4.0.0",                # PDF extraction (fallback)
    "youtube-transcript-api>=0.6.0",  # YouTube transcript
]
# Browser-based inspection and verification tools
# Install with: pip install -e ".[tools]"
tools = [
    "datasette>=0.65.0",   # SQLite browser — http://localhost:8001
]

[project.scripts]
openstinger = "openstinger.mcp.server:main"
openstinger-scaffold = "openstinger.scaffold.mcp.server:main"
openstinger-gradient = "openstinger.gradient.mcp.server:main"
openstinger-cli = "openstinger.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
markers = [
    "tier1: Tier 1 (memory harness) tests",
    "tier2: Tier 2 (scaffold/vault) tests",
    "tier3: Tier 3 (gradient/alignment) tests",
    "integration: requires FalkorDB running",
    "llm: requires Anthropic API key",
    "slow: long-running tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
